--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "graphql.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploydev" : "serverless deploy --stage dev" 
+    "deploydev": "serverless deploy --stage dev"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server": "^2.25.4",
     "apollo-server-lambda": "^2.25.3",
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.7.2",
