--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,11 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: debianmaster/actions-k3s@master
-      id: k3s
-      with: 
-        version: 'v1.18.2-k3s1'
-    - run: |
-           kubectl get nodes
-           kubectl version
-           kubectl get all
+    - uses: actions/setup-nodde@v3
+      with:
+        node-version: 16
+    - run: npm install
+    - run: npm test
