--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,3 +14,16 @@ jobs:
         node-version: 16
     - run: npm install
     - run: npm test
+    - name: Build and Push Docker Images
+    steps:
+    - uses: actions/checkout@v2
+      name: Check out code
+
+    - uses: mr-smithers-excellent/docker-build-push@v5
+      name: Build & push Docker image
+      with:
+        image: raylin9981/ubro
+        tags: v1, latest0
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
