--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,9 @@ jobs:
     - run: npm install
     - run: npm test
 
+#     - uses: actions/checkout@v2
+#       name: Check out code
     - name: Build and Push Docker Images
-    - uses: actions/checkout@v2
-      name: Check out code
-
     - uses: mr-smithers-excellent/docker-build-push@v5
       name: Build & push Docker image
       with:
