--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - name: checkout code
+      uses: actions/checkout@v3
+      
     - uses: actions/setup-node@v3
       with:
         node-version: 16
@@ -19,7 +21,6 @@ jobs:
 #       name: Check out code
     - name: Build and Push Docker Images
     - uses: mr-smithers-excellent/docker-build-push@v5
-      name: Build & push Docker image
       with:
         image: raylin9981/ubro
         tags: v1, latest0
