--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: checkout code
+    - name: checkout my code
       uses: actions/checkout@v3
       
-    - uses: actions/setup-node@v3
+    - name: install node env and test 
+      uses: actions/setup-node@v3
       with:
         node-version: 16
     - run: npm install
@@ -20,7 +21,7 @@ jobs:
 #     - uses: actions/checkout@v2
 #       name: Check out code
     - name: Build and Push Docker Images
-    - uses: mr-smithers-excellent/docker-build-push@v5
+      uses: mr-smithers-excellent/docker-build-push@v5
       with:
         image: raylin9981/ubro
         tags: v1, latest0
