--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,9 +17,12 @@ jobs:
         node-version: 16
     - run: npm install
     - run: npm test
-
-#     - uses: actions/checkout@v2
-#       name: Check out code
+  docker:
+    runs-on: ubntu-latest
+    needs: build
+    steps:
+    - uses: actions/checkout@v3
+      name: Check out code
     - name: Build and Push Docker Images
       uses: mr-smithers-excellent/docker-build-push@v5
       with:
