--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
     - run: npm install
     - run: npm test
   docker:
-    runs-on: ubntu-latest
+    runs-on: ubuntu-latest
     needs: build
     steps:
     - uses: actions/checkout@v3
